kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: housing-disrepair
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: housing-disrepair
  template:
    metadata:
      labels:
        app: housing-disrepair
    spec:
      containers:
        - name: webapp
          imagePullPolicy: Always
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/central-digital-product-team/housing-disrepair-oss-staging-ecr:hd-add-kube-config-latest
          ports:
            - containerPort: 3000
