kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: housing-disrepair-service
  labels:
    app: housing-disrepair-service
spec:
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: housing-disrepair
