kube/ingress-live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: housing-disrepair
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: housing-disrepair-housing-disrepair-oss-staging-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
  - hosts:
    - housing-disrepair-oss-staging.apps.live.cloud-platform.service.justice.gov.uk
  rules:
  - host: housing-disrepair-oss-staging.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: housing-disrepair-service
            port:
              number: 3000
